--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint-config-htmlacademy": "9.0.0"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "lint": "^0.8.19"
+  },
   "scripts": {
     "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
     "lint": "eslint js/"
